[tool.poetry]
name = "llm-langchain-practice"
version = "0.1.0"
description = "Chatbot using Langchain"
authors = ["Rohith Surya Podugu <prsurya1020@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.11"
langchain-openai = "^0.1.17"
langchain-chroma = "^0.1.2"
langserve = "^0.2.2"
langchain-anthropic = "^0.1.20"
langchain-community = "^0.2.10"
langgraph = "^0.1.9"
tavily-python = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
